# Tracer2_Record

./: README.md  ZEADME.md
src/odom_test/: CMakeLists.txt  package.xml
src/odom_test/odom_bags/: odom_wheel_2025-06-11-20-18-01.bag
src/odom_test/scripts/: odom_visualize.py
src/realsense_ros/: CMakeLists.txt  package.xml
src/realsense_ros/launch/: realsense_d435.launch
src/realsense_ros/scripts/: realsense_d435_pub.py
src/remote_record/: CMakeLists.txt  package.xml
src/remote_record/launch/: remote_record.launch  view_tracer_urdf.launch
src/remote_record/scripts/: remote_record.py
src/remote_record/urdf/: tracer2_a2m12_d435i.xacro
