<?xml version="1.0"?>
<package format="2">
  <name>realsense_ros</name>
  <version>0.0.0</version>
  <description>The realsense_ros package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
